[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scenes/editor_splash/EditorSplash.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/DefaultGodotTheme/GodotTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/splash/IconSplash.png" type="Texture" id=3]



[sub_resource type="Animation" id=1]
resource_name = "Show"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LoadingVbox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.2 ),
"transitions": PoolRealArray( 1, 0.5, -2, 1 ),
"update": 0,
"values": [ -256, -256, 16, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Show"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="EditorSplash" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 5
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconSplash" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -64.0
margin_right = 128.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 128, 64 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowAnim" type="AnimationPlayer" parent="Panel/IconSplash"]
autoplay = "Show"
anims/Show = SubResource( 1 )

[node name="LoadingVbox" type="VBoxContainer" parent="Panel/IconSplash"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = 52.0
margin_right = 64.0
margin_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="Panel/IconSplash/LoadingVbox"]
margin_top = 19.0
margin_right = 128.0
margin_bottom = 41.0
text = "Loading..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlinkingAnim" type="AnimationPlayer" parent="Panel/IconSplash/LoadingVbox/LoadingLabel"]
autoplay = "Blinking"
anims/Blinking = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="Panel/IconSplash/LoadingVbox"]
margin_top = 57.0
margin_right = 128.0
margin_bottom = 71.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4

[node name="WatermarkHBox" type="HBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_bottom = -26.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatermarkLabelOpen" type="Label" parent="Panel/WatermarkHBox"]
margin_left = 297.0
margin_right = 315.0
margin_bottom = 22.0
text = "--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatermarkLabelProjName" type="Label" parent="Panel/WatermarkHBox"]
margin_left = 315.0
margin_right = 406.0
margin_bottom = 22.0
text = "ProjectName"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatermarkLabelProjVersion" type="Label" parent="Panel/WatermarkHBox"]
margin_left = 406.0
margin_right = 440.0
margin_bottom = 22.0
text = "v1.x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatermarkLabelSeparation" type="Label" parent="Panel/WatermarkHBox"]
margin_left = 440.0
margin_right = 453.0
margin_bottom = 22.0
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatermarkLabelCreatorPrefix" type="Label" parent="Panel/WatermarkHBox"]
margin_left = 453.0
margin_right = 476.0
margin_bottom = 22.0
text = "by"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatermarkLabelCreator" type="Label" parent="Panel/WatermarkHBox"]
margin_left = 476.0
margin_right = 484.0
margin_bottom = 22.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatermarkLabelClose" type="Label" parent="Panel/WatermarkHBox"]
margin_left = 484.0
margin_right = 502.0
margin_bottom = 22.0
text = "--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowAnim" type="AnimationPlayer" parent="Panel/WatermarkHBox"]
autoplay = "Anim"
anims/Anim = SubResource( 3 )

[node name="GodotEngineLabel" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
text = "Made with Godot Engine"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/GodotEngineLabel"]
autoplay = "Show"
anims/Show = SubResource( 4 )

[node name="LoadDoneCheckTimer" type="Timer" parent="."]
wait_time = 0.001
autostart = true
[connection signal="timeout" from="LoadDoneCheckTimer" to="." method="_on_LoadDoneCheckTimer_timeout"]
